--- a/notebooks/demand_prediction_AM_v1.ipynb
+++ b/notebooks/demand_prediction_AM_v1.ipynb
@@ -1168,7 +1168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "8c5b98f4-2fef-4255-a0c9-595d21d2309e",
    "metadata": {},
    "outputs": [
@@ -1186,20 +1186,20 @@
      "data": {
       "text/html": [
        "<style type=\"text/css\">\n",
-       "#T_ca5c5_row10_col0, #T_ca5c5_row10_col1, #T_ca5c5_row10_col2, #T_ca5c5_row10_col3, #T_ca5c5_row10_col4, #T_ca5c5_row10_col5 {\n",
+       "#T_642fa_row10_col0, #T_642fa_row10_col1, #T_642fa_row10_col2, #T_642fa_row10_col3, #T_642fa_row10_col4, #T_642fa_row10_col5 {\n",
        "  background: yellow;\n",
        "}\n",
        "</style>\n",
-       "<table id=\"T_ca5c5\">\n",
+       "<table id=\"T_642fa\">\n",
        "  <thead>\n",
        "    <tr>\n",
        "      <th class=\"blank level0\" >&nbsp;</th>\n",
-       "      <th id=\"T_ca5c5_level0_col0\" class=\"col_heading level0 col0\" >MAE</th>\n",
-       "      <th id=\"T_ca5c5_level0_col1\" class=\"col_heading level0 col1\" >MSE</th>\n",
-       "      <th id=\"T_ca5c5_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n",
-       "      <th id=\"T_ca5c5_level0_col3\" class=\"col_heading level0 col3\" >R2</th>\n",
-       "      <th id=\"T_ca5c5_level0_col4\" class=\"col_heading level0 col4\" >RMSLE</th>\n",
-       "      <th id=\"T_ca5c5_level0_col5\" class=\"col_heading level0 col5\" >MAPE</th>\n",
+       "      <th id=\"T_642fa_level0_col0\" class=\"col_heading level0 col0\" >MAE</th>\n",
+       "      <th id=\"T_642fa_level0_col1\" class=\"col_heading level0 col1\" >MSE</th>\n",
+       "      <th id=\"T_642fa_level0_col2\" class=\"col_heading level0 col2\" >RMSE</th>\n",
+       "      <th id=\"T_642fa_level0_col3\" class=\"col_heading level0 col3\" >R2</th>\n",
+       "      <th id=\"T_642fa_level0_col4\" class=\"col_heading level0 col4\" >RMSLE</th>\n",
+       "      <th id=\"T_642fa_level0_col5\" class=\"col_heading level0 col5\" >MAPE</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th class=\"index_name level0\" >Fold</th>\n",
@@ -1213,118 +1213,118 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
-       "      <td id=\"T_ca5c5_row0_col0\" class=\"data row0 col0\" >4.6816</td>\n",
-       "      <td id=\"T_ca5c5_row0_col1\" class=\"data row0 col1\" >59.8774</td>\n",
-       "      <td id=\"T_ca5c5_row0_col2\" class=\"data row0 col2\" >7.7380</td>\n",
-       "      <td id=\"T_ca5c5_row0_col3\" class=\"data row0 col3\" >0.9899</td>\n",
-       "      <td id=\"T_ca5c5_row0_col4\" class=\"data row0 col4\" >0.0981</td>\n",
-       "      <td id=\"T_ca5c5_row0_col5\" class=\"data row0 col5\" >0.0835</td>\n",
+       "      <th id=\"T_642fa_level0_row0\" class=\"row_heading level0 row0\" >0</th>\n",
+       "      <td id=\"T_642fa_row0_col0\" class=\"data row0 col0\" >4.6816</td>\n",
+       "      <td id=\"T_642fa_row0_col1\" class=\"data row0 col1\" >59.8774</td>\n",
+       "      <td id=\"T_642fa_row0_col2\" class=\"data row0 col2\" >7.7380</td>\n",
+       "      <td id=\"T_642fa_row0_col3\" class=\"data row0 col3\" >0.9899</td>\n",
+       "      <td id=\"T_642fa_row0_col4\" class=\"data row0 col4\" >0.0981</td>\n",
+       "      <td id=\"T_642fa_row0_col5\" class=\"data row0 col5\" >0.0835</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
-       "      <td id=\"T_ca5c5_row1_col0\" class=\"data row1 col0\" >4.7727</td>\n",
-       "      <td id=\"T_ca5c5_row1_col1\" class=\"data row1 col1\" >65.1033</td>\n",
-       "      <td id=\"T_ca5c5_row1_col2\" class=\"data row1 col2\" >8.0687</td>\n",
-       "      <td id=\"T_ca5c5_row1_col3\" class=\"data row1 col3\" >0.9893</td>\n",
-       "      <td id=\"T_ca5c5_row1_col4\" class=\"data row1 col4\" >0.0738</td>\n",
-       "      <td id=\"T_ca5c5_row1_col5\" class=\"data row1 col5\" >0.0630</td>\n",
+       "      <th id=\"T_642fa_level0_row1\" class=\"row_heading level0 row1\" >1</th>\n",
+       "      <td id=\"T_642fa_row1_col0\" class=\"data row1 col0\" >4.7727</td>\n",
+       "      <td id=\"T_642fa_row1_col1\" class=\"data row1 col1\" >65.1033</td>\n",
+       "      <td id=\"T_642fa_row1_col2\" class=\"data row1 col2\" >8.0687</td>\n",
+       "      <td id=\"T_642fa_row1_col3\" class=\"data row1 col3\" >0.9893</td>\n",
+       "      <td id=\"T_642fa_row1_col4\" class=\"data row1 col4\" >0.0738</td>\n",
+       "      <td id=\"T_642fa_row1_col5\" class=\"data row1 col5\" >0.0630</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
-       "      <td id=\"T_ca5c5_row2_col0\" class=\"data row2 col0\" >5.6777</td>\n",
-       "      <td id=\"T_ca5c5_row2_col1\" class=\"data row2 col1\" >82.6494</td>\n",
-       "      <td id=\"T_ca5c5_row2_col2\" class=\"data row2 col2\" >9.0912</td>\n",
-       "      <td id=\"T_ca5c5_row2_col3\" class=\"data row2 col3\" >0.9869</td>\n",
-       "      <td id=\"T_ca5c5_row2_col4\" class=\"data row2 col4\" >0.0861</td>\n",
-       "      <td id=\"T_ca5c5_row2_col5\" class=\"data row2 col5\" >0.0705</td>\n",
+       "      <th id=\"T_642fa_level0_row2\" class=\"row_heading level0 row2\" >2</th>\n",
+       "      <td id=\"T_642fa_row2_col0\" class=\"data row2 col0\" >5.6777</td>\n",
+       "      <td id=\"T_642fa_row2_col1\" class=\"data row2 col1\" >82.6494</td>\n",
+       "      <td id=\"T_642fa_row2_col2\" class=\"data row2 col2\" >9.0912</td>\n",
+       "      <td id=\"T_642fa_row2_col3\" class=\"data row2 col3\" >0.9869</td>\n",
+       "      <td id=\"T_642fa_row2_col4\" class=\"data row2 col4\" >0.0861</td>\n",
+       "      <td id=\"T_642fa_row2_col5\" class=\"data row2 col5\" >0.0705</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
-       "      <td id=\"T_ca5c5_row3_col0\" class=\"data row3 col0\" >5.2956</td>\n",
-       "      <td id=\"T_ca5c5_row3_col1\" class=\"data row3 col1\" >82.4689</td>\n",
-       "      <td id=\"T_ca5c5_row3_col2\" class=\"data row3 col2\" >9.0812</td>\n",
-       "      <td id=\"T_ca5c5_row3_col3\" class=\"data row3 col3\" >0.9875</td>\n",
-       "      <td id=\"T_ca5c5_row3_col4\" class=\"data row3 col4\" >0.0847</td>\n",
-       "      <td id=\"T_ca5c5_row3_col5\" class=\"data row3 col5\" >0.0725</td>\n",
+       "      <th id=\"T_642fa_level0_row3\" class=\"row_heading level0 row3\" >3</th>\n",
+       "      <td id=\"T_642fa_row3_col0\" class=\"data row3 col0\" >5.2956</td>\n",
+       "      <td id=\"T_642fa_row3_col1\" class=\"data row3 col1\" >82.4689</td>\n",
+       "      <td id=\"T_642fa_row3_col2\" class=\"data row3 col2\" >9.0812</td>\n",
+       "      <td id=\"T_642fa_row3_col3\" class=\"data row3 col3\" >0.9875</td>\n",
+       "      <td id=\"T_642fa_row3_col4\" class=\"data row3 col4\" >0.0847</td>\n",
+       "      <td id=\"T_642fa_row3_col5\" class=\"data row3 col5\" >0.0725</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
-       "      <td id=\"T_ca5c5_row4_col0\" class=\"data row4 col0\" >5.0592</td>\n",
-       "      <td id=\"T_ca5c5_row4_col1\" class=\"data row4 col1\" >58.8067</td>\n",
-       "      <td id=\"T_ca5c5_row4_col2\" class=\"data row4 col2\" >7.6686</td>\n",
-       "      <td id=\"T_ca5c5_row4_col3\" class=\"data row4 col3\" >0.9901</td>\n",
-       "      <td id=\"T_ca5c5_row4_col4\" class=\"data row4 col4\" >0.0880</td>\n",
-       "      <td id=\"T_ca5c5_row4_col5\" class=\"data row4 col5\" >0.0674</td>\n",
+       "      <th id=\"T_642fa_level0_row4\" class=\"row_heading level0 row4\" >4</th>\n",
+       "      <td id=\"T_642fa_row4_col0\" class=\"data row4 col0\" >5.0592</td>\n",
+       "      <td id=\"T_642fa_row4_col1\" class=\"data row4 col1\" >58.8067</td>\n",
+       "      <td id=\"T_642fa_row4_col2\" class=\"data row4 col2\" >7.6686</td>\n",
+       "      <td id=\"T_642fa_row4_col3\" class=\"data row4 col3\" >0.9901</td>\n",
+       "      <td id=\"T_642fa_row4_col4\" class=\"data row4 col4\" >0.0880</td>\n",
+       "      <td id=\"T_642fa_row4_col5\" class=\"data row4 col5\" >0.0674</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
-       "      <td id=\"T_ca5c5_row5_col0\" class=\"data row5 col0\" >5.4543</td>\n",
-       "      <td id=\"T_ca5c5_row5_col1\" class=\"data row5 col1\" >83.1811</td>\n",
-       "      <td id=\"T_ca5c5_row5_col2\" class=\"data row5 col2\" >9.1204</td>\n",
-       "      <td id=\"T_ca5c5_row5_col3\" class=\"data row5 col3\" >0.9873</td>\n",
-       "      <td id=\"T_ca5c5_row5_col4\" class=\"data row5 col4\" >0.0762</td>\n",
-       "      <td id=\"T_ca5c5_row5_col5\" class=\"data row5 col5\" >0.0646</td>\n",
+       "      <th id=\"T_642fa_level0_row5\" class=\"row_heading level0 row5\" >5</th>\n",
+       "      <td id=\"T_642fa_row5_col0\" class=\"data row5 col0\" >5.4543</td>\n",
+       "      <td id=\"T_642fa_row5_col1\" class=\"data row5 col1\" >83.1811</td>\n",
+       "      <td id=\"T_642fa_row5_col2\" class=\"data row5 col2\" >9.1204</td>\n",
+       "      <td id=\"T_642fa_row5_col3\" class=\"data row5 col3\" >0.9873</td>\n",
+       "      <td id=\"T_642fa_row5_col4\" class=\"data row5 col4\" >0.0762</td>\n",
+       "      <td id=\"T_642fa_row5_col5\" class=\"data row5 col5\" >0.0646</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
-       "      <td id=\"T_ca5c5_row6_col0\" class=\"data row6 col0\" >5.9653</td>\n",
-       "      <td id=\"T_ca5c5_row6_col1\" class=\"data row6 col1\" >98.3517</td>\n",
-       "      <td id=\"T_ca5c5_row6_col2\" class=\"data row6 col2\" >9.9172</td>\n",
-       "      <td id=\"T_ca5c5_row6_col3\" class=\"data row6 col3\" >0.9857</td>\n",
-       "      <td id=\"T_ca5c5_row6_col4\" class=\"data row6 col4\" >0.0860</td>\n",
-       "      <td id=\"T_ca5c5_row6_col5\" class=\"data row6 col5\" >0.0689</td>\n",
+       "      <th id=\"T_642fa_level0_row6\" class=\"row_heading level0 row6\" >6</th>\n",
+       "      <td id=\"T_642fa_row6_col0\" class=\"data row6 col0\" >5.9653</td>\n",
+       "      <td id=\"T_642fa_row6_col1\" class=\"data row6 col1\" >98.3517</td>\n",
+       "      <td id=\"T_642fa_row6_col2\" class=\"data row6 col2\" >9.9172</td>\n",
+       "      <td id=\"T_642fa_row6_col3\" class=\"data row6 col3\" >0.9857</td>\n",
+       "      <td id=\"T_642fa_row6_col4\" class=\"data row6 col4\" >0.0860</td>\n",
+       "      <td id=\"T_642fa_row6_col5\" class=\"data row6 col5\" >0.0689</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
-       "      <td id=\"T_ca5c5_row7_col0\" class=\"data row7 col0\" >4.9106</td>\n",
-       "      <td id=\"T_ca5c5_row7_col1\" class=\"data row7 col1\" >62.0593</td>\n",
-       "      <td id=\"T_ca5c5_row7_col2\" class=\"data row7 col2\" >7.8778</td>\n",
-       "      <td id=\"T_ca5c5_row7_col3\" class=\"data row7 col3\" >0.9898</td>\n",
-       "      <td id=\"T_ca5c5_row7_col4\" class=\"data row7 col4\" >0.0849</td>\n",
-       "      <td id=\"T_ca5c5_row7_col5\" class=\"data row7 col5\" >0.0713</td>\n",
+       "      <th id=\"T_642fa_level0_row7\" class=\"row_heading level0 row7\" >7</th>\n",
+       "      <td id=\"T_642fa_row7_col0\" class=\"data row7 col0\" >4.9106</td>\n",
+       "      <td id=\"T_642fa_row7_col1\" class=\"data row7 col1\" >62.0593</td>\n",
+       "      <td id=\"T_642fa_row7_col2\" class=\"data row7 col2\" >7.8778</td>\n",
+       "      <td id=\"T_642fa_row7_col3\" class=\"data row7 col3\" >0.9898</td>\n",
+       "      <td id=\"T_642fa_row7_col4\" class=\"data row7 col4\" >0.0849</td>\n",
+       "      <td id=\"T_642fa_row7_col5\" class=\"data row7 col5\" >0.0713</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
-       "      <td id=\"T_ca5c5_row8_col0\" class=\"data row8 col0\" >5.7391</td>\n",
-       "      <td id=\"T_ca5c5_row8_col1\" class=\"data row8 col1\" >76.2650</td>\n",
-       "      <td id=\"T_ca5c5_row8_col2\" class=\"data row8 col2\" >8.7330</td>\n",
-       "      <td id=\"T_ca5c5_row8_col3\" class=\"data row8 col3\" >0.9889</td>\n",
-       "      <td id=\"T_ca5c5_row8_col4\" class=\"data row8 col4\" >0.0777</td>\n",
-       "      <td id=\"T_ca5c5_row8_col5\" class=\"data row8 col5\" >0.0652</td>\n",
+       "      <th id=\"T_642fa_level0_row8\" class=\"row_heading level0 row8\" >8</th>\n",
+       "      <td id=\"T_642fa_row8_col0\" class=\"data row8 col0\" >5.7391</td>\n",
+       "      <td id=\"T_642fa_row8_col1\" class=\"data row8 col1\" >76.2650</td>\n",
+       "      <td id=\"T_642fa_row8_col2\" class=\"data row8 col2\" >8.7330</td>\n",
+       "      <td id=\"T_642fa_row8_col3\" class=\"data row8 col3\" >0.9889</td>\n",
+       "      <td id=\"T_642fa_row8_col4\" class=\"data row8 col4\" >0.0777</td>\n",
+       "      <td id=\"T_642fa_row8_col5\" class=\"data row8 col5\" >0.0652</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
-       "      <td id=\"T_ca5c5_row9_col0\" class=\"data row9 col0\" >4.7863</td>\n",
-       "      <td id=\"T_ca5c5_row9_col1\" class=\"data row9 col1\" >62.6493</td>\n",
-       "      <td id=\"T_ca5c5_row9_col2\" class=\"data row9 col2\" >7.9151</td>\n",
-       "      <td id=\"T_ca5c5_row9_col3\" class=\"data row9 col3\" >0.9897</td>\n",
-       "      <td id=\"T_ca5c5_row9_col4\" class=\"data row9 col4\" >0.0853</td>\n",
-       "      <td id=\"T_ca5c5_row9_col5\" class=\"data row9 col5\" >0.0757</td>\n",
+       "      <th id=\"T_642fa_level0_row9\" class=\"row_heading level0 row9\" >9</th>\n",
+       "      <td id=\"T_642fa_row9_col0\" class=\"data row9 col0\" >4.7863</td>\n",
+       "      <td id=\"T_642fa_row9_col1\" class=\"data row9 col1\" >62.6493</td>\n",
+       "      <td id=\"T_642fa_row9_col2\" class=\"data row9 col2\" >7.9151</td>\n",
+       "      <td id=\"T_642fa_row9_col3\" class=\"data row9 col3\" >0.9897</td>\n",
+       "      <td id=\"T_642fa_row9_col4\" class=\"data row9 col4\" >0.0853</td>\n",
+       "      <td id=\"T_642fa_row9_col5\" class=\"data row9 col5\" >0.0757</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row10\" class=\"row_heading level0 row10\" >Mean</th>\n",
-       "      <td id=\"T_ca5c5_row10_col0\" class=\"data row10 col0\" >5.2342</td>\n",
-       "      <td id=\"T_ca5c5_row10_col1\" class=\"data row10 col1\" >73.1412</td>\n",
-       "      <td id=\"T_ca5c5_row10_col2\" class=\"data row10 col2\" >8.5211</td>\n",
-       "      <td id=\"T_ca5c5_row10_col3\" class=\"data row10 col3\" >0.9885</td>\n",
-       "      <td id=\"T_ca5c5_row10_col4\" class=\"data row10 col4\" >0.0841</td>\n",
-       "      <td id=\"T_ca5c5_row10_col5\" class=\"data row10 col5\" >0.0703</td>\n",
+       "      <th id=\"T_642fa_level0_row10\" class=\"row_heading level0 row10\" >Mean</th>\n",
+       "      <td id=\"T_642fa_row10_col0\" class=\"data row10 col0\" >5.2342</td>\n",
+       "      <td id=\"T_642fa_row10_col1\" class=\"data row10 col1\" >73.1412</td>\n",
+       "      <td id=\"T_642fa_row10_col2\" class=\"data row10 col2\" >8.5211</td>\n",
+       "      <td id=\"T_642fa_row10_col3\" class=\"data row10 col3\" >0.9885</td>\n",
+       "      <td id=\"T_642fa_row10_col4\" class=\"data row10 col4\" >0.0841</td>\n",
+       "      <td id=\"T_642fa_row10_col5\" class=\"data row10 col5\" >0.0703</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th id=\"T_ca5c5_level0_row11\" class=\"row_heading level0 row11\" >Std</th>\n",
-       "      <td id=\"T_ca5c5_row11_col0\" class=\"data row11 col0\" >0.4351</td>\n",
-       "      <td id=\"T_ca5c5_row11_col1\" class=\"data row11 col1\" >12.6587</td>\n",
-       "      <td id=\"T_ca5c5_row11_col2\" class=\"data row11 col2\" >0.7292</td>\n",
-       "      <td id=\"T_ca5c5_row11_col3\" class=\"data row11 col3\" >0.0015</td>\n",
-       "      <td id=\"T_ca5c5_row11_col4\" class=\"data row11 col4\" >0.0066</td>\n",
-       "      <td id=\"T_ca5c5_row11_col5\" class=\"data row11 col5\" >0.0058</td>\n",
+       "      <th id=\"T_642fa_level0_row11\" class=\"row_heading level0 row11\" >Std</th>\n",
+       "      <td id=\"T_642fa_row11_col0\" class=\"data row11 col0\" >0.4351</td>\n",
+       "      <td id=\"T_642fa_row11_col1\" class=\"data row11 col1\" >12.6587</td>\n",
+       "      <td id=\"T_642fa_row11_col2\" class=\"data row11 col2\" >0.7292</td>\n",
+       "      <td id=\"T_642fa_row11_col3\" class=\"data row11 col3\" >0.0015</td>\n",
+       "      <td id=\"T_642fa_row11_col4\" class=\"data row11 col4\" >0.0066</td>\n",
+       "      <td id=\"T_642fa_row11_col5\" class=\"data row11 col5\" >0.0058</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n"
       ],
       "text/plain": [
-       "<pandas.io.formats.style.Styler at 0x28a459c60>"
+       "<pandas.io.formats.style.Styler at 0x28a2510f0>"
       ]
      },
      "metadata": {},
@@ -1350,7 +1350,7 @@
     }
    ],
    "source": [
-    "tuned_et = tune_model(et, optimize = 'MAPE')"
+    "tuned_et = tune_model(et, optimize = 'MAPE', choose_better=True)"
    ]
   },
   {
